fix: prevent hover effect on dark mode mobile

--- a/apps/frontend/src/app/shared/components/preview/preview.component.css
+++ b/apps/frontend/src/app/shared/components/preview/preview.component.css
@@ -13,7 +13,9 @@
     @apply bg-transparent;
   }
 
-  .preview-container:hover {
-    @apply bg-transparent ease-in scale-105;
+  @media screen and (min-width: 768px) and (hover: hover) {
+    .preview-container:hover {
+      @apply bg-transparent ease-in scale-105;
+    }
   }
 }
